# gridlock_demand_predictor

./: .gitignore  CMakeLists.txt  COMMANDS.md  README.md  data_clean.ipynb  data_clean_v2.py  main.py  pyproject.toml
Predictions/: PredNN1.csv  predXGBoost1.csv
api/: index.html  server.py
dataset/: transformed_test.csv
models/: DeepNeuralNetwork.ipynb  XGBoostPredictor.ipynb  simplePLmodel.ipynb
src/: ANSIColors.h  Column.h  CommandParser.cpp  CommandParser.h  FileSystem.h  GridFormatter.h  NexusManager.cpp  NexusManager.h  QueryEngine.h  Row.cpp  Row.h  Table.cpp  Table.h  main.cpp
utilities/: data_clean_v2.ipynb  data_cleaning.py
